objects/pse__Revenue_Forecast_Batch_Log__c.object
<CustomObject>
    <customHelpPage>pse__RevenueForecastBatchLogHelp</customHelpPage>
    <description>Stores details of any errors that occurred when a revenue forecast was run.</description>
    <fields>
        <fullName>pse__Message__c</fullName>
        <description>The message logged for the related revenue forecast.</description>
        <inlineHelpText>The message logged for the related revenue forecast.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the opportunity this log was generated for.</description>
        <inlineHelpText>Lookup to the opportunity this log was generated for.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Revenue Forecast Batch Logs</relationshipLabel>
        <relationshipName>Revenue_Forecast_Batch_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the project this log was generated for.</description>
        <inlineHelpText>A lookup to the project this log was generated for.</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Revenue Forecast Batch Logs</relationshipLabel>
        <relationshipName>Revenue_Forecast_Batch_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Revenue_Forecast_Batch__c</fullName>
        <description>A lookup to the revenue forecast batch this log was generated for.</description>
        <inlineHelpText>A lookup to the revenue forecast batch this log was generated for.</inlineHelpText>
        <label>Revenue Forecast Batch</label>
        <referenceTo>pse__Revenue_Forecast_Batch__c</referenceTo>
        <relationshipLabel>Revenue Forecast Batch Logs</relationshipLabel>
        <relationshipName>Revenue_Forecast_Batch_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Revenue Forecast Batch Log</label>
    <nameField>
        <displayFormat>RFBL-{00000000}</displayFormat>
        <label>Revenue Forecast Batch Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecast Batch Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>